--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
     debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.3"
+    implementation("androidx.cardview:cardview:1.0.0")
+    implementation "androidx.compose.material:material-icons-extended:1.3.1"
+
 
     def roomVersion = "2.5.0"
     implementation("androidx.room:room-runtime:$roomVersion")
